--- a/index.html
+++ b/index.html
@@ -7,37 +7,41 @@
         </title>
         <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet"/>
         <script src="angular.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
         <script src="angularApp.js"></script>
         <style>
             .glyphicon-thumbs-up { cursor:pointer }
         </style>
     </head>
-    <body ng-app="flapperNews" ng-controller="MainCtrl">
+    <body ng-app="flapperNews">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <div class="page-header">
-                    <h1>Flapper News</h1>
-                </div>
-                <div ng-repeat="post in posts | orderBy: '-upvotes'">
-                    <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(post)"></span>
-                    {{post.upvotes}}
-                    <a ng-show="post.link" href="{{post.link}}">
-                        {{post.title}}</a>
-                    <span ng-hide="post.link">
+                <ui-view></ui-view>
+                <script type="text/ng-template" id="/home.html">
+                    <div class="page-header">
+                        <h1>Flapper News</h1>
+                    </div>
+                    <div ng-repeat="post in posts | orderBy: '-upvotes'">
+                        <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(post)"></span>
+                        {{post.upvotes}}
+                        <a ng-show="post.link" href="{{post.link}}">
+                            {{post.title}}</a>
+                        <span ng-hide="post.link">
                         {{post.title}}
                     </span>
-                </div>
-                <form ng-submit="addPost()"
-                        style="margin-top:30px";>
-                    <h3>Add a new post</h3>
-                    <div class="form-group">
-                        <input class="form-control" type="text" ng-model="title" placeholder="Title"/>
                     </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Link" ng-model="link"/>
-                    </div>
-                    <button class="btn btn-primary" type="submit">Post</button>
-                </form>
+                    <form ng-submit="addPost()"
+                          style="margin-top:30px";>
+                        <h3>Add a new post</h3>
+                        <div class="form-group">
+                            <input class="form-control" type="text" ng-model="title" placeholder="Title"/>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Link" ng-model="link"/>
+                        </div>
+                        <button class="btn btn-primary" type="submit">Post</button>
+                    </form>
+                </script>
             </div>
         </div>
     </body>
