Adding comments while sharing posts through a service is done

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                         <span ng-hide="post.link">
                         {{post.title}}
                     </span>
+                    <span>
+                        <a href="#/posts/{{$index}}">Comments</a>
+                    </span>
                     </div>
                     <form ng-submit="addPost()"
                           style="margin-top:30px";>
@@ -40,6 +43,30 @@
                             <input type="text" class="form-control" placeholder="Link" ng-model="link"/>
                         </div>
                         <button class="btn btn-primary" type="submit">Post</button>
+                    </form>
+                </script>
+                <script type="text/ng-template" id="/posts.html">
+                    <div class="page-header">
+                        <h3>
+                            <a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
+                            <span ng-hide="post.link">{{post.title}}</span>
+                        </h3>
+                    </div>
+                    <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
+                        <span class="glyphicon glyphicon-thumbs-up"
+                              ng-click="incrementUpvotes(comment)"></span>
+                        {{comment.upvotes}} - by {{comment.author}}
+                        <span style="font-size: 20px; margin-left:10px;">
+                            {{comment.body}}
+                        </span>
+                    </div>
+                    <form ng-submit="addComment()"
+                          style="margin-top:30px;">
+                        <h3>Add a new comment</h3>
+                        <div class="form-group">
+                            <input type="text" placeholder="Comment" class="form-control" ng-model="body"/>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Post</button>
                     </form>
                 </script>
             </div>
